# smartsensor-data-raw2qua-S3-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
scripts/: deploy.sh
src/: __init__.py
src/common/: __init__.py  api_client.py  auth.py  utils.py
src/glue_jobs/: __init__.py  check_job.py  extract_job.py  transformations.py
terraform/environments/dev/: main.tf  outputs.tf  tfplan
terraform/environments/prod/: main.tf  outputs.tf
terraform/modules/athena/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
terraform/modules/glue/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/stepfunctions/: main.tf  outputs.tf  variables.tf
tests/unit/: test_utils.py
