[tool.poetry]
name = "smartsensor-data-raw2qua-s3-pipeline"
version = "0.1.0"
description = "Enterprise-grade data pipeline for REST API ingestion to S3 using AWS Glue Spark"
authors = ["Platform Team <platform@smartsensors.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
boto3 = "^1.34.0"
pyspark = "^3.5.0"
python-dateutil = "^2.8.2"
pydantic = "^2.5.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.2"
boto3-stubs = {extras = ["glue", "s3", "secretsmanager", "stepfunctions"], version = "^1.34.0"}

[tool.poetry.group.test.dependencies]
moto = "^4.2.11"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
